--- a/NFAS/config.ini
+++ b/NFAS/config.ini
@@ -4,3 +4,12 @@ ip=127.0.0.1
 database=nfas
 uid=sa
 pwd=586926
+[TcpServer]
+;;iP= 0 时，为本机所有ip
+ip=127.0.0.1
+port = 9696
+
+[ClientList]
+sum = 2
+0 = 10-213#127.0.0.1
+1 = 10-212#127.0.0.1
