--- a/NFAS/config.ini
+++ b/NFAS/config.ini
@@ -1,4 +1,4 @@
-[DBServer]
+﻿[DBServer]
 ip=127.0.0.1
 ;ip = 192.168.1.3
 database=nfas
@@ -11,5 +11,5 @@ port = 9696
 
 [ClientList]
 sum = 2
-0 = 10-213#127.0.0.1
-1 = 10-212#127.0.0.1
+0 = 10-213	127.0.0.1
+1 = 10-212	127.0.0.1
