--- a/x64/Release/config.ini
+++ b/x64/Release/config.ini
@@ -3,10 +3,10 @@ ip=182.61.20.42
 ;ip = 192.168.1.3
 database=nfas
 uid=sa
-pwd=586926hangAIjing
+pwd=586926aBc
 [TcpServer]
 ;;iP= 0 时，为本机所有ip
-ip=127.0.0.1
+ip=0
 port = 9696
 
 [ClientList]
